# MUONSPHERE

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: muonsphere_demo.yaml  peft_lora_demo.yaml
docs/: RUN_MATRIX.md  SPEC.md
examples/: train_muonsphere_demo.py  train_peft_lora_demo.py
src/muonsphere/: __init__.py  atom.py  optim.py  peft.py
tests/: test_core.py
