[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muonsphere"
version = "0.1.0"
description = "Spectral-sphere Muon-style optimizer and PEFT operator constraints for nGPT/MODULUS experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.1"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "pyyaml>=6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"
